<resources>
    <string name="app_name">EducaTour</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="language_options">Language Options</string>
    <string name="indonesia">Bahasa</string>
    <string name="english">English</string>
    <string name="china">Chinese</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="faq_camera">Why do I need to allow camera permissions?</string>
    <string name="faq_camera_answer">
        If you’d like to scan a landmark with your camera, it is mandatory that you allow our application to use your device’s camera.
        \n\nThe camera will only be accessed when you’re about to take a picture, you can revoke this access anytime in your device’s settings.
        \n\nMore information:
    </string>
    <string name="faq_camera_hyperlink"><u>https://support.google.com/android/answer/9431959</u></string>
    <string name="faq_internet">Does this app require internet connection?</string>
    <string name="faq_internet_answer">Yes, it does.
        \nThe application will access the internet for landmark scanning feature and data fetching for landmarks information and media files.</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="need_camera_permission">You need to allow camera permission to use the scanning feature.</string>
    <string name="close">Close</string>
    <string name="educatour">EducaTour</string>
    <string name="about_us">About Us</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="post_image">post image</string>
    <string name="result">Result</string>
    <string name="created_at">created at</string>
    <string name="result_image">result image</string>
    <string name="rate">100%</string>
    <string name="landmark_name">landmark name</string>
    <string name="furthermore">furthermore</string>
    <string name="about_description">EducaTour was founded by the C241-PS283 Bangkit Capstone Team dedicated to revolutionize the educational travel experience.</string>
    <string name="about_ml_team">Machine Learning Team:\n
        • Hans Naufal Granito\n
        • Divany Harryndira\n
        • Muhammad Raffa Reyhan
    </string>
    <string name="about_cc_team">Cloud Computing Team:\n
        • Mohammad Ferry Husnil Arif\n
        • Apta Rasendriya Wijaya
    </string>
    <string name="about_md_team">Mobile Development Team:\n
        • Ibni Shaquille Syauqi Ibrahim\n
        • Deeon Yaksa Anugrah
    </string>
    <string name="educatour_extra_space">" EducaTour "</string>
    <string name="history"><u>History</u></string>
    <string name="unique_activities"><u>Unique Activities</u></string>
    <string name="visiting_information"><u>Visiting Information</u></string>
    <string name="contact_information"><u>Contact Information</u></string>
    <string name="google_maps"><u>Google Maps</u></string>
    <string name="foreigner">Foreigner</string>
    <string name="regular">Regular</string>
    <string name="packages">Packages</string>
    <string name="child">Child</string>
    <string name="adult">Adult</string>
    <string name="sun">Sunday</string>
    <string name="sat">Saturday</string>
    <string name="fri">Friday</string>
    <string name="thru">Thursday</string>
    <string name="wed">Wednesday</string>
    <string name="tues">Tuesday</string>
    <string name="mon">Monday</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="web">Web</string>
    <string name="application_restart">Application Restart</string>
    <string name="application_will_now_restart_to_change_the_preferred_language">Application will now restart to change the preferred language.</string>
    <string name="student">Student</string>
    <string name="unrecognized_landmark">Unrecognized Landmark!</string>
    <string name="network_error">Network Error</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="image_captured">Image captured and saved</string>
</resources>