<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_white"
    tools:context=".FaqActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_ios_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/main_black" />

    <TextView
        android:id="@+id/tv_faq_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/faq"
        android:textAlignment="center"
        android:textColor="@color/main_black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/main_black"
        app:layout_constraintTop_toBottomOf="@id/tv_faq_header" />

    <TextView
        android:id="@+id/tv_faq_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/faq_camera"
        android:textColor="@color/main_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/divider_one"
        app:layout_constraintTop_toBottomOf="@id/divider_one" />

    <TextView
        android:id="@+id/tv_faq_one_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:justificationMode="inter_word"
        android:text="@string/faq_camera_answer"
        android:textColor="@color/main_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_faq_one" />

    <TextView
        android:id="@+id/tv_faq_one_hyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq_camera_hyperlink"
        android:textSize="13.5sp"
        app:layout_constraintStart_toStartOf="@id/tv_faq_one_answer"
        app:layout_constraintTop_toBottomOf="@id/tv_faq_one_answer" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_two"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_faq_one_hyperlink" />

    <TextView
        android:id="@+id/tv_faq_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/faq_internet"
        android:textColor="@color/main_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/divider_one"
        app:layout_constraintTop_toBottomOf="@id/divider_two" />

    <TextView
        android:id="@+id/tv_faq_two_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:justificationMode="inter_word"
        android:text="@string/faq_internet_answer"
        android:textColor="@color/main_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_faq_two" />

</androidx.constraintlayout.widget.ConstraintLayout>