<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.setting.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:background="@drawable/gradient_main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heave_heart_one"
            android:text="@string/educatour_extra_space"
            android:textColor="@color/main_white"
            android:textSize="96sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:dividerColor="@color/light_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container" />

    <TextView
        android:id="@+id/tv_language_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ppmori_regular"
        android:text="@string/language_options"
        android:textColor="@color/main_gray"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_one" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language_options_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_language_options">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_english"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_united_kingdom"
            app:civ_border_color="@color/inactive_color"
            app:civ_border_width="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ppmori_regular"
            android:text="@string/english"
            android:textColor="@color/main_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_english"
            app:layout_constraintStart_toStartOf="@id/iv_english"
            app:layout_constraintTop_toBottomOf="@id/iv_english" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_indonesia"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_indonesia"
            app:civ_border_color="@color/inactive_color"
            app:civ_border_width="0.5dp"
            app:layout_constraintStart_toEndOf="@id/iv_english"
            app:layout_constraintTop_toTopOf="@id/iv_english" />

        <TextView
            android:id="@+id/tv_indonesia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ppmori_regular"
            android:text="@string/indonesia"
            android:textColor="@color/main_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_indonesia"
            app:layout_constraintStart_toStartOf="@id/iv_indonesia"
            app:layout_constraintTop_toBottomOf="@id/iv_indonesia" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_china"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_china"
            app:civ_border_color="@color/inactive_color"
            app:civ_border_width="0.5dp"
            app:layout_constraintStart_toEndOf="@id/iv_indonesia"
            app:layout_constraintTop_toTopOf="@id/iv_english" />

        <TextView
            android:id="@+id/tv_china"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ppmori_regular"
            android:text="@string/china"
            android:textColor="@color/main_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_china"
            app:layout_constraintStart_toStartOf="@id/iv_china"
            app:layout_constraintTop_toBottomOf="@id/iv_china" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_two"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_options_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="@id/divider_two"
        app:layout_constraintTop_toBottomOf="@id/divider_two">

        <ImageView
            android:id="@+id/iv_faq"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_faq"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ppmori_regular"
            android:text="@string/faq"
            android:textColor="@color/main_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_faq"
            app:layout_constraintStart_toEndOf="@id/iv_faq"
            app:layout_constraintTop_toTopOf="@id/iv_faq" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_ios_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/main_black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_three"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_faq" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="@id/divider_three"
        app:layout_constraintTop_toBottomOf="@id/divider_three">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ppmori_regular"
            android:text="@string/about"
            android:textColor="@color/main_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_about"
            app:layout_constraintStart_toEndOf="@id/iv_about"
            app:layout_constraintTop_toTopOf="@id/iv_about" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_ios_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/main_black" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>